src/main/java/org/nebulostore/query/language/interpreter/antlr/DQLGrammarParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g 2012-07-08 19:12:38

  package org.nebulostore.query.language.interpreter.antlr;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class DQLGrammarParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "NEGATION", "ID", "INT", "EXPONENT", "DOUBLE", "COMMENT", "WS", "ESC_SEQ", "STRING", "CHAR", "HEX_DIGIT", "UNICODE_ESC", "OCTAL_ESC", "STRING_LITERAL", "','", "'LAMBDA'", "':'", "'('", "')'", "'PRIVATE_MY'", "'PUBLIC_MY'", "'PRIVATE_COND'", "'PUBLIC_OTHER'", "'PUBLIC_COND'", "'INTEGER'", "'DOUBLE'", "'STRING'", "'TUPLE'", "'<'", "'>'", "'LIST'", "'FILE'", "'TRUE'", "'FALSE'", "'not'", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", "'!='", "'<='", "'>='", "'&&'", "'||'", "'IS'", "'AS'", "'LET'", "'GATHER'", "'FORWARD'", "'TO'", "'REDUCE'"
    };
    public static final int EOF=-1;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int NEGATION=4;
    public static final int ID=5;
    public static final int INT=6;
    public static final int EXPONENT=7;
    public static final int DOUBLE=8;
    public static final int COMMENT=9;
    public static final int WS=10;
    public static final int ESC_SEQ=11;
    public static final int STRING=12;
    public static final int CHAR=13;
    public static final int HEX_DIGIT=14;
    public static final int UNICODE_ESC=15;
    public static final int OCTAL_ESC=16;
    public static final int STRING_LITERAL=17;

    // delegates
    // delegators


        public DQLGrammarParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public DQLGrammarParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return DQLGrammarParser.tokenNames; }
    public String getGrammarFileName() { return "/home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g"; }


    public static class function_decl_parameters_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "function_decl_parameters"
    // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:80:1: function_decl_parameters : ID ( ',' ID )* ;
    public final DQLGrammarParser.function_decl_parameters_return function_decl_parameters() throws RecognitionException {
        DQLGrammarParser.function_decl_parameters_return retval = new DQLGrammarParser.function_decl_parameters_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token ID1=null;
        Token char_literal2=null;
        Token ID3=null;

        CommonTree ID1_tree=null;
        CommonTree char_literal2_tree=null;
        CommonTree ID3_tree=null;

        try {
            // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:80:26: ( ID ( ',' ID )* )
            // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:81:3: ID ( ',' ID )*
            {
            root_0 = (CommonTree)adaptor.nil();

            ID1=(Token)match(input,ID,FOLLOW_ID_in_function_decl_parameters620); 
            ID1_tree = (CommonTree)adaptor.create(ID1);
            adaptor.addChild(root_0, ID1_tree);

            // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:81:6: ( ',' ID )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==18) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:81:8: ',' ID
            	    {
            	    char_literal2=(Token)match(input,18,FOLLOW_18_in_function_decl_parameters624); 
            	    ID3=(Token)match(input,ID,FOLLOW_ID_in_function_decl_parameters628); 
            	    ID3_tree = (CommonTree)adaptor.create(ID3);
            	    adaptor.addChild(root_0, ID3_tree);


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "function_decl_parameters"

    public static class lambda_function_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "lambda_function"
    // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:83:1: lambda_function : 'LAMBDA' function_decl_parameters ':' '(' expression ')' ;
    public final DQLGrammarParser.lambda_function_return lambda_function() throws RecognitionException {
        DQLGrammarParser.lambda_function_return retval = new DQLGrammarParser.lambda_function_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal4=null;
        Token char_literal6=null;
        Token char_literal7=null;
        Token char_literal9=null;
        DQLGrammarParser.function_decl_parameters_return function_decl_parameters5 = null;

        DQLGrammarParser.expression_return expression8 = null;


        CommonTree string_literal4_tree=null;
        CommonTree char_literal6_tree=null;
        CommonTree char_literal7_tree=null;
        CommonTree char_literal9_tree=null;

        try {
            // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:83:17: ( 'LAMBDA' function_decl_parameters ':' '(' expression ')' )
            // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:84:3: 'LAMBDA' function_decl_parameters ':' '(' expression ')'
            {
            root_0 = (CommonTree)adaptor.nil();

            string_literal4=(Token)match(input,19,FOLLOW_19_in_lambda_function642); 
            string_literal4_tree = (CommonTree)adaptor.create(string_literal4);
            root_0 = (CommonTree)adaptor.becomeRoot(string_literal4_tree, root_0);

            pushFollow(FOLLOW_function_decl_parameters_in_lambda_function645);
            function_decl_parameters5=function_decl_parameters();

            state._fsp--;

            adaptor.addChild(root_0, function_decl_parameters5.getTree());
            char_literal6=(Token)match(input,20,FOLLOW_20_in_lambda_function647); 
            char_literal6_tree = (CommonTree)adaptor.create(char_literal6);
            adaptor.addChild(root_0, char_literal6_tree);

            char_literal7=(Token)match(input,21,FOLLOW_21_in_lambda_function649); 
            pushFollow(FOLLOW_expression_in_lambda_function652);
            expression8=expression();

            state._fsp--;

            adaptor.addChild(root_0, expression8.getTree());
            char_literal9=(Token)match(input,22,FOLLOW_22_in_lambda_function654); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "lambda_function"

    public static class call_parameter_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "call_parameter"
    // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:86:1: call_parameter : expression ;
    public final DQLGrammarParser.call_parameter_return call_parameter() throws RecognitionException {
        DQLGrammarParser.call_parameter_return retval = new DQLGrammarParser.call_parameter_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        DQLGrammarParser.expression_return expression10 = null;



        try {
            // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:86:15: ( expression )
            // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:87:3: expression
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_expression_in_call_parameter664);
            expression10=expression();

            state._fsp--;

            adaptor.addChild(root_0, expression10.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "call_parameter"

    public static class function_call_parameters_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "function_call_parameters"
    // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:89:1: function_call_parameters : call_parameter ( ',' call_parameter )* ;
    public final DQLGrammarParser.function_call_parameters_return function_call_parameters() throws RecognitionException {
        DQLGrammarParser.function_call_parameters_return retval = new DQLGrammarParser.function_call_parameters_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal12=null;
        DQLGrammarParser.call_parameter_return call_parameter11 = null;

        DQLGrammarParser.call_parameter_return call_parameter13 = null;


        CommonTree char_literal12_tree=null;

        try {
            // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:89:26: ( call_parameter ( ',' call_parameter )* )
            // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:90:3: call_parameter ( ',' call_parameter )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_call_parameter_in_function_call_parameters675);
            call_parameter11=call_parameter();

            state._fsp--;

            adaptor.addChild(root_0, call_parameter11.getTree());
            // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:90:19: ( ',' call_parameter )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==18) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:90:20: ',' call_parameter
            	    {
            	    char_literal12=(Token)match(input,18,FOLLOW_18_in_function_call_parameters679); 
            	    pushFollow(FOLLOW_call_parameter_in_function_call_parameters682);
            	    call_parameter13=call_parameter();

            	    state._fsp--;

            	    adaptor.addChild(root_0, call_parameter13.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "function_call_parameters"

    public static class function_call_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "function_call"
    // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:94:1: function_call : ID '(' ( function_call_parameters )? ')' ;
    public final DQLGrammarParser.function_call_return function_call() throws RecognitionException {
        DQLGrammarParser.function_call_return retval = new DQLGrammarParser.function_call_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token ID14=null;
        Token char_literal15=null;
        Token char_literal17=null;
        DQLGrammarParser.function_call_parameters_return function_call_parameters16 = null;


        CommonTree ID14_tree=null;
        CommonTree char_literal15_tree=null;
        CommonTree char_literal17_tree=null;

        try {
            // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:94:15: ( ID '(' ( function_call_parameters )? ')' )
            // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:95:3: ID '(' ( function_call_parameters )? ')'
            {
            root_0 = (CommonTree)adaptor.nil();

            ID14=(Token)match(input,ID,FOLLOW_ID_in_function_call697); 
            ID14_tree = (CommonTree)adaptor.create(ID14);
            root_0 = (CommonTree)adaptor.becomeRoot(ID14_tree, root_0);

            char_literal15=(Token)match(input,21,FOLLOW_21_in_function_call700); 
            char_literal15_tree = (CommonTree)adaptor.create(char_literal15);
            adaptor.addChild(root_0, char_literal15_tree);

            // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:95:11: ( function_call_parameters )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( ((LA3_0>=ID && LA3_0<=INT)||LA3_0==DOUBLE||LA3_0==STRING_LITERAL||LA3_0==19||LA3_0==21||(LA3_0>=36 && LA3_0<=40)) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:95:11: function_call_parameters
                    {
                    pushFollow(FOLLOW_function_call_parameters_in_function_call702);
                    function_call_parameters16=function_call_parameters();

                    state._fsp--;

                    adaptor.addChild(root_0, function_call_parameters16.getTree());

                    }
                    break;

            }

            char_literal17=(Token)match(input,22,FOLLOW_22_in_function_call705); 
            char_literal17_tree = (CommonTree)adaptor.create(char_literal17);
            adaptor.addChild(root_0, char_literal17_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "function_call"

    public static class privacy_decl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "privacy_decl"
    // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:103:1: privacy_decl : ( 'PRIVATE_MY' | 'PUBLIC_MY' | 'PRIVATE_COND' | 'PUBLIC_OTHER' | 'PUBLIC_COND' );
    public final DQLGrammarParser.privacy_decl_return privacy_decl() throws RecognitionException {
        DQLGrammarParser.privacy_decl_return retval = new DQLGrammarParser.privacy_decl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token set18=null;

        CommonTree set18_tree=null;

        try {
            // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:104:3: ( 'PRIVATE_MY' | 'PUBLIC_MY' | 'PRIVATE_COND' | 'PUBLIC_OTHER' | 'PUBLIC_COND' )
            // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:
            {
            root_0 = (CommonTree)adaptor.nil();

            set18=(Token)input.LT(1);
            if ( (input.LA(1)>=23 && input.LA(1)<=27) ) {
                input.consume();
                adaptor.addChild(root_0, (CommonTree)adaptor.create(set18));
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "privacy_decl"

    public static class type_list_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "type_list"
    // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:112:1: type_list : type ( ',' type )* ;
    public final DQLGrammarParser.type_list_return type_list() throws RecognitionException {
        DQLGrammarParser.type_list_return retval = new DQLGrammarParser.type_list_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal20=null;
        DQLGrammarParser.type_return type19 = null;

        DQLGrammarParser.type_return type21 = null;


        CommonTree char_literal20_tree=null;

        try {
            // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:112:11: ( type ( ',' type )* )
            // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:113:3: type ( ',' type )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_type_in_type_list790);
            type19=type();

            state._fsp--;

            adaptor.addChild(root_0, type19.getTree());
            // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:113:9: ( ',' type )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==18) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:113:10: ',' type
            	    {
            	    char_literal20=(Token)match(input,18,FOLLOW_18_in_type_list794); 
            	    pushFollow(FOLLOW_type_in_type_list797);
            	    type21=type();

            	    state._fsp--;

            	    adaptor.addChild(root_0, type21.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "type_list"

    public static class type_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "type"
    // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:115:1: type : ( 'INTEGER' | 'DOUBLE' | 'STRING' | 'TUPLE' '<' type_list '>' | 'LIST' '<' type '>' | 'FILE' );
    public final DQLGrammarParser.type_return type() throws RecognitionException {
        DQLGrammarParser.type_return retval = new DQLGrammarParser.type_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal22=null;
        Token string_literal23=null;
        Token string_literal24=null;
        Token string_literal25=null;
        Token char_literal26=null;
        Token char_literal28=null;
        Token string_literal29=null;
        Token char_literal30=null;
        Token char_literal32=null;
        Token string_literal33=null;
        DQLGrammarParser.type_list_return type_list27 = null;

        DQLGrammarParser.type_return type31 = null;


        CommonTree string_literal22_tree=null;
        CommonTree string_literal23_tree=null;
        CommonTree string_literal24_tree=null;
        CommonTree string_literal25_tree=null;
        CommonTree char_literal26_tree=null;
        CommonTree char_literal28_tree=null;
        CommonTree string_literal29_tree=null;
        CommonTree char_literal30_tree=null;
        CommonTree char_literal32_tree=null;
        CommonTree string_literal33_tree=null;

        try {
            // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:116:3: ( 'INTEGER' | 'DOUBLE' | 'STRING' | 'TUPLE' '<' type_list '>' | 'LIST' '<' type '>' | 'FILE' )
            int alt5=6;
            switch ( input.LA(1) ) {
            case 28:
                {
                alt5=1;
                }
                break;
            case 29:
                {
                alt5=2;
                }
                break;
            case 30:
                {
                alt5=3;
                }
                break;
            case 31:
                {
                alt5=4;
                }
                break;
            case 34:
                {
                alt5=5;
                }
                break;
            case 35:
                {
                alt5=6;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }

            switch (alt5) {
                case 1 :
                    // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:116:5: 'INTEGER'
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    string_literal22=(Token)match(input,28,FOLLOW_28_in_type811); 
                    string_literal22_tree = (CommonTree)adaptor.create(string_literal22);
                    adaptor.addChild(root_0, string_literal22_tree);


                    }
                    break;
                case 2 :
                    // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:117:5: 'DOUBLE'
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    string_literal23=(Token)match(input,29,FOLLOW_29_in_type817); 
                    string_literal23_tree = (CommonTree)adaptor.create(string_literal23);
                    adaptor.addChild(root_0, string_literal23_tree);


                    }
                    break;
                case 3 :
                    // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:118:5: 'STRING'
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    string_literal24=(Token)match(input,30,FOLLOW_30_in_type823); 
                    string_literal24_tree = (CommonTree)adaptor.create(string_literal24);
                    adaptor.addChild(root_0, string_literal24_tree);


                    }
                    break;
                case 4 :
                    // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:119:5: 'TUPLE' '<' type_list '>'
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    string_literal25=(Token)match(input,31,FOLLOW_31_in_type829); 
                    string_literal25_tree = (CommonTree)adaptor.create(string_literal25);
                    root_0 = (CommonTree)adaptor.becomeRoot(string_literal25_tree, root_0);

                    char_literal26=(Token)match(input,32,FOLLOW_32_in_type832); 
                    pushFollow(FOLLOW_type_list_in_type835);
                    type_list27=type_list();

                    state._fsp--;

                    adaptor.addChild(root_0, type_list27.getTree());
                    char_literal28=(Token)match(input,33,FOLLOW_33_in_type837); 

                    }
                    break;
                case 5 :
                    // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:120:5: 'LIST' '<' type '>'
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    string_literal29=(Token)match(input,34,FOLLOW_34_in_type844); 
                    string_literal29_tree = (CommonTree)adaptor.create(string_literal29);
                    root_0 = (CommonTree)adaptor.becomeRoot(string_literal29_tree, root_0);

                    char_literal30=(Token)match(input,32,FOLLOW_32_in_type847); 
                    pushFollow(FOLLOW_type_in_type850);
                    type31=type();

                    state._fsp--;

                    adaptor.addChild(root_0, type31.getTree());
                    char_literal32=(Token)match(input,33,FOLLOW_33_in_type852); 

                    }
                    break;
                case 6 :
                    // /home/marcin/5ROK/praca/nebulostore/repo/nebulostore/trunk/DQLGrammar/src/main/java/org/nebulostore/query/grammar/DQLGrammar.g:121:5: 'FILE'
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    string_literal33=(Token)match(input,35,FOLLOW_35_in_type860); 
                    string_literal33_tree = (CommonTree)adaptor.create(string_literal33);
                    adaptor.addChild(root_0, string_literal33_tree);


                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "type"
